manifests/statefulset-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  labels:
    app: httpbin
    service: httpbin
spec:
  ports:
  - name: http
    port: 80
  clusterIP: None
  selector:
    app: httpbin
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: httpbin
spec:
  selector:
    matchLabels:
      app: httpbin # has to match .spec.template.metadata.labels
      version: v1
  serviceName: "httpbin"
  replicas: 2
  template:
    metadata:
      labels:
        app: httpbin # has to match .spec.selector.matchLabels
        version: v1
    spec:
      serviceAccountName: httpbin
      terminationGracePeriodSeconds: 10
      containers:
      - name: httpbin
        image: docker.io/kennethreitz/httpbin
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          name: web
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: httpbin-0
spec:
  hosts:
  - httpbin-0.httpbin.default.svc.cluster.local
  location: MESH_INTERNAL
  ports:
  - name: web
    number: 80
    protocol: HTTP
  resolution: DNS
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: httpbin-1
spec:
  hosts:
  - httpbin-1.httpbin.default.svc.cluster.local
  location: MESH_INTERNAL
  ports:
  - name: web
    number: 80
    protocol: HTTP
  resolution: DNS
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: httpbin
spec:
  servers:
  - port:
      number: 443
      name: httpbin-0
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: httpbin-0-credential
    hosts:
    - httpbin-0.example.com
  - port:
      number: 443
      name: httpbin-1
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: httpbin-1-credential
    hosts:
    - httpbin-1.example.com
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin-0
spec:
  hosts:
  - "httpbin-0.example.com"
  gateways:
  - httpbin
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: httpbin-0.httpbin.default.svc.cluster.local
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin-1
spec:
  hosts:
  - "httpbin-1.example.com"
  gateways:
  - httpbin
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: httpbin-1.httpbin.default.svc.cluster.local
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: httpbin-0
spec:
  host: httpbin-0.httpbin.default.svc.cluster.local
  trafficPolicy:
    portLevelSettings:
    - port:
        number: 80
      tls:
        mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: httpbin-1
spec:
  host: httpbin-1.httpbin.default.svc.cluster.local
  trafficPolicy:
    portLevelSettings:
    - port:
        number: 80
      tls:
        mode: ISTIO_MUTUAL
---
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: "default"
spec:
  mtls:
    mode: STRICT
